--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@docusaurus/core": "^2.4.1",
     "@docusaurus/plugin-client-redirects": "^2.4.1",
+    "@docusaurus/plugin-ideal-image": "^2.4.1",
     "@docusaurus/preset-classic": "^2.4.1",
     "@mdx-js/react": "^1.6.22",
     "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
     "postcss": "^8.4.24",
     "prism-react-renderer": "^1.3.5",
+    "pure-react-carousel": "^1.30.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwindcss": "^3.3.2"
